# ChangeLog for sys-apps/groff
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/groff/ChangeLog,v 1.75 2006/11/09 01:13:02 iluxa Exp $

  09 Nov 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  groff-1.19.2-r1.ebuild:
  Stable on mips

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> groff-1.19.1-r2.ebuild:
  Added ~sparc-fbsd keyword.

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  groff-1.19.2-r1.ebuild:
  Stable on hppa wrt #146509

  14 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  groff-1.19.2-r1.ebuild:
  Stable on sparc wrt #146509

  13 Sep 2006; Aron Griffis <agriffis@gentoo.org> groff-1.19.2-r1.ebuild:
  Mark 1.19.2-r1 stable on ia64. #146509

  13 Sep 2006; Olivier Crête <tester@gentoo.org> groff-1.19.2-r1.ebuild:
  Stable on amd64 per bug #146509

  10 Sep 2006; <ticho@gentoo.org> groff-1.19.2-r1.ebuild:
  Stable on x86, security bug #146509.

  10 Sep 2006; Christel Dahlskjaer <christel@gentoo.org>
  groff-1.19.2-r1.ebuild:
  Alpha stable for bug #146509

  08 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  groff-1.19.2-r1.ebuild:
  stable on ppc (Bug #146509)

  06 Sep 2006; Markus Rothe <corsair@gentoo.org> groff-1.19.2-r1.ebuild:
  Stable on ppc64; bug #146509

  23 May 2006; <solar@gentoo.org> -groff-1.18.1-r4.ebuild,
  -groff-1.18.1.1.ebuild:
  - removed obsolete/vuln ebuilds

  14 Apr 2006; Mark Loeser <halcy0n@gentoo.org>
  +files/groff-1.18.1.1-gcc41.patch, groff-1.18.1.1.ebuild:
  Add patch to fix compilation with gcc-4.1, thanks to KIMURA Masaru <hiyuh
  DOT root AT gmail DOT com>; bug #125533

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> groff-1.19.2-r1.ebuild:
  Add ~x86-fbsd keyword.

  15 Mar 2006; Danny van Dyk <kugelfang@gentoo.org>
  +files/groff-1.19.1-gcc-4.1.patch, groff-1.19.1-r2.ebuild:
  Added a patch allow compilation with gcc-4.1.0.

*groff-1.19.2-r1 (03 Mar 2006)
