@@ -10,19 +10,20 @@ AUX groff-man-UTF-8.diff 391 RMD160 58abd2807f47316e486fe5021994ce856a2c8942 SHA
 MD5 e0ea59264695cc68dc9947e4611dde5d files/groff-man-UTF-8.diff 391
 RMD160 58abd2807f47316e486fe5021994ce856a2c8942 files/groff-man-UTF-8.diff 391
 SHA256 d5095044064e30178e50ea6bc63f20d7a55c3daf053054bae38f6584611ce754 files/groff-man-UTF-8.diff 391
+DIST groff-1.19.2-japanese.patch.bz2 160688 RMD160 4f52a0ac81c20bc5f8cb308d0fc08fd99c42e907 SHA1 50a4612657b2ac2b7852c69c8cbca08021f3956f SHA256 67c09321a9190a33ad4c9d2c5ca8462ddaa235dd1c230a80ae6eef6236053c41
 DIST groff-1.19.2.tar.gz 2903263 RMD160 d5e57fa1d71dbff2c59a40a5a68c7417ffe211c9 SHA1 cfad99a5c52933a6a9180e394bd94fbaec0ac956 SHA256 d864fbd0bf6dea24e4f71736da9902a1cae86d0a1a893b5fe17118927257ec3e
-EBUILD groff-1.19.2-r1.ebuild 2303 RMD160 93797e7ea8f3e4ca0be5d63ee3e676e0d021ba6f SHA1 d2e0d082a43126f5f76b7ebbb0637a6253b41605 SHA256 a189f48f1de11832e4339b20a4c7f469ed0fe3cdc566d486a4af7fd35f743d19
-MD5 1ef001e45b9762ec18bbf9fd246cae0e groff-1.19.2-r1.ebuild 2303
-RMD160 93797e7ea8f3e4ca0be5d63ee3e676e0d021ba6f groff-1.19.2-r1.ebuild 2303
-SHA256 a189f48f1de11832e4339b20a4c7f469ed0fe3cdc566d486a4af7fd35f743d19 groff-1.19.2-r1.ebuild 2303
-MISC ChangeLog 10473 RMD160 fae43f7a7414434c5068043a17bca537c3a63632 SHA1 7ec9eb9caddf8d7d0ab33763885ea3941b1176a1 SHA256 2dae0cbc4baf7eeca0b5dfc68cc8ea28cc052788fc703839ea6032f5c663e199
-MD5 87eb641d5b8119cde1b1c751e9aaafb3 ChangeLog 10473
-RMD160 fae43f7a7414434c5068043a17bca537c3a63632 ChangeLog 10473
-SHA256 2dae0cbc4baf7eeca0b5dfc68cc8ea28cc052788fc703839ea6032f5c663e199 ChangeLog 10473
+EBUILD groff-1.19.2-r1.ebuild 2493 RMD160 c3e9b6b25138ef366e97785e99486ff33ed77b23 SHA1 00094cfada04655c59abd00176b85cb2c8a2251d SHA256 8e7fba416c8f23e2558b5a65308186475e2b7dc1fc65368080041cb2e90084b8
+MD5 d5c1b91bec209097aa48d91598786fa7 groff-1.19.2-r1.ebuild 2493
+RMD160 c3e9b6b25138ef366e97785e99486ff33ed77b23 groff-1.19.2-r1.ebuild 2493
+SHA256 8e7fba416c8f23e2558b5a65308186475e2b7dc1fc65368080041cb2e90084b8 groff-1.19.2-r1.ebuild 2493
+MISC ChangeLog 10898 RMD160 87b4336357d8c6e3150f6daa09548558d51f2525 SHA1 8c2f36baaa53851c05e5f29e96ef67b1b00ec1f0 SHA256 5885c715e82e126798334e5d8d7870726e4cf43dd39851e6530001bec4aed26c
+MD5 c70c36e043a65fdbb6df9fb61b908bfa ChangeLog 10898
+RMD160 87b4336357d8c6e3150f6daa09548558d51f2525 ChangeLog 10898
+SHA256 5885c715e82e126798334e5d8d7870726e4cf43dd39851e6530001bec4aed26c ChangeLog 10898
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-MD5 00e0a109daada579070a8180ca7e286b files/digest-groff-1.19.2-r1 241
-RMD160 008278c15ff202a657df0bb399ba14ed2186bf39 files/digest-groff-1.19.2-r1 241
-SHA256 93ca80ca48324de10c2aea113ca76d3801d5377ed6e034406794976124b93c49 files/digest-groff-1.19.2-r1 241
+MD5 70f6b75efd3a05a24339ea8d0881804c files/digest-groff-1.19.2-r1 515
+RMD160 1cca63d735d0fff253b21c61f7fe68053a952fc5 files/digest-groff-1.19.2-r1 515
+SHA256 498177c9549e0a83bf5aa3f3a8e5f41deeb09094c9c6f52fc6d55806e4100972 files/digest-groff-1.19.2-r1 515
