@@ -1,0 +1,6 @@
+MD5 8aea037f3bf2f654fe6f93e26660643d groff-1.19.2-japanese.patch.bz2 160688
+RMD160 4f52a0ac81c20bc5f8cb308d0fc08fd99c42e907 groff-1.19.2-japanese.patch.bz2 160688
+SHA256 67c09321a9190a33ad4c9d2c5ca8462ddaa235dd1c230a80ae6eef6236053c41 groff-1.19.2-japanese.patch.bz2 160688
+MD5 f7c9cf2e4b9967d3af167d7c9fadaae4 groff-1.19.2.tar.gz 2903263
+RMD160 d5e57fa1d71dbff2c59a40a5a68c7417ffe211c9 groff-1.19.2.tar.gz 2903263
+SHA256 d864fbd0bf6dea24e4f71736da9902a1cae86d0a1a893b5fe17118927257ec3e groff-1.19.2.tar.gz 2903263
