@@ -1,6 +1,16 @@
 # ChangeLog for sys-apps/groff
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/groff/ChangeLog,v 1.75 2006/11/09 01:13:02 iluxa Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/groff/ChangeLog,v 1.78 2006/12/30 13:44:18 usata Exp $
+
+  30 Dec 2006; Mamoru KOMACHI <usata@gentoo.org> groff-1.19.2-r1.ebuild:
+  Added eautoreconf and --enable-japanese in order to get cjk patch working
+  for man-pages-ja. See bug #134377.
+
+  30 Dec 2006; Mike Frysinger <vapier@gentoo.org> groff-1.19.2-r1.ebuild:
+  Add support for USE=cjk #134377.
+
+  29 Dec 2006; Mike Frysinger <vapier@gentoo.org> groff-1.19.2-r1.ebuild:
+  Fix from Chris Mayo for doc install paths #155073.
 
   09 Nov 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
   groff-1.19.2-r1.ebuild:
